# 1999-2006_gradschool-3

jimpaw/: jimpaw.py  pyxplot.py  pyxplot_old.py  pyxtest.py  rootntuple-1.tgz  test.py  tmpxA3Kvu.dvi
jimpaw/finished/: Minuit-1_5_2  minuit.cpp  minuit.h  minuit.py  rootntuple.cpp  rootntuple.h
jimpaw/old/: jimpaw-1.tgz  jimpaw-2.tgz  jimpaw-3.tgz  jimpaw-4.tgz
jimpaw/roottrials/: hello.root  lauras.root  riodoc.ps  riodoc_slim.ps  test.cpp  testit
jimpaw/roottrials/Rio/v3r1/configure/: Makefile  Makefile.in  README  config.status  configure  configure.in
jimpaw/roottrials/Rio/v3r1/configure/CVS/: Entries  Repository
jimpaw/roottrials/Rio/v3r1/configure/autom4te.cache/: output.0  traces.0
jimpaw/roottrials2/: lauras.root  test.cpp  testit
papers/: cv.ps  cv.tex
papers/cbx/: PoS.cls  lepp.aux  lepp.dvi  lepp.tex  lepp2.aux  lepp2.dvi  lepp2.tex  lepp3.aux  lepp3.dvi  lepp3.ps  lepp3.tex  lepp4.aux  lepp4.dvi  lepp4.ps  lepp4.tex  pos.tex  post_cbx.aux  post_cbx.dvi  post_cbx.ps  post_cbx.tex  post_conference.aux  post_conference.dvi  post_conference.ps  post_conference.tex  whiteboard.tex
papers/cbx_addendum/: 3071105-001.eps  3071105-002.eps  3071105-003.eps  3071105-004.eps  addendum.aux  addendum.dvi  addendum.ps  addendum.tex  novemberfits_noapr03_3_1.0_final_allfit_comb3.eps  novemberfits_noapr03_3_1.0_pulls1again.eps  novemberfits_noapr03_3_1.0_pulls2again.eps  novemberfits_noapr03_3_1.0_pulls3again.eps
papers/clns_home/: beamenergyspread.eps  clns.aux  clns.dvi  clns.tex  energycorrection.eps  miscal.eps  miscalpull.eps  scan_periods1.eps  scan_periods2.eps  scan_periods3.eps  scan_periods4.eps  scan_periods5.eps  three_resonances.eps
papers/handzd_cbx/: cbx.aux  cbx.dvi  cbx.tex  cbx.toc  loose_parts.fig.bak  loose_parts_DR.eps  loose_parts_DR.fig  loose_parts_DR.fig.bak  loose_parts_ZD.eps  loose_parts_ZD.fig  loose_parts_ZD.fig.bak  sketch.eps  sketch.fig  sketch.fig.bak  tools_for_zd-dr_alignment.ps
papers/llwi_proceedings/: part_squarea.eps  pivarski.aux  pivarski.dvi  pivarski.ps  pivarski.tex  pivarski_fig1.eps  pivarski_fig1.fig  pivarski_fig2.eps  pivarski_fig2.fig  pivarski_fig3.eps  pivarski_fig3.fig
papers/prl/: CLEO_paper_example_prl.tex  CLEO_paper_template.tex  ack_prl_oct05.tex  backgrounds_undistilled.eps  cascades_undistilled.eps  cuts_undistilled.eps  fits_undistilled.eps  interference-a.eps  interference-b.eps  interference-c.eps  interference-d.eps  interference-e.eps  interference-f.eps  interference-gggamma.eps  interference-gggamma.fig  interference-gggamma.fig.bak  interference-h.eps  interference-i.eps  interference-j.eps  interference-k.eps  interference-l.eps  interference-m.eps  interference-n.eps  interference-o.eps  interference-p.eps  interference-qqonly.eps  interference-qqonly.fig  interference-qqonly.fig.bak  interference.dvi  interference.ps  interference.tex  motivation_table_pyx_justU2.eps  nicerfits.eps  nicerfits_bottom.eps  nicerfits_combined.fig  nicerfits_narrow.eps  nicerfits_top.eps  nicerfits_top1.eps  nicerfits_top2.eps  nicerfits_top3.eps  (+11 more)
papers/thesis/: cornell.cls  makeparts.py  newplots_feb8.tgz  newplots_feb9.tgz  thesis.dvi  thesis.lot  thesis.tex  thesis_feb7.tex
papers/thesis_arxiv/: allee.eps  allscanss.eps  allscansss.eps  allscanssss.eps  apr03scan.eps  areaconstraint.eps  asymmetriccartoon.eps  awesome.eps  backgroundsvsrun.eps  bbtransitions.eps  beamenergydrift.eps  beamenergyspread.eps  beamgaspz.eps  biastowardzero.eps  bmixing.eps  btomunu.eps  cartoon.eps  cascadeagreement.eps  cascadescartoon.eps  cleoiii.eps  comparelumis.eps  continuum.eps  coordinatesystem.eps  cornellpotential.eps  crashruns.eps  crashruns2.eps  dedication.eps  diagramgee.eps  driftcell.eps  dxy.eps  dxydzcontaminationa.eps  dxydzcontaminationb.eps  dz.eps  eeagreementa.eps  eeagreementb.eps  eeagreementc.eps  eeagreementd.eps  eeagreemente.eps  eeagreementf.eps  eeagreementg.eps  (+44 more)
papers/thesis_finaltweaks/: freefits.eps  freefits.fig.bak  newnewplots_mar6.tgz  thesis.dvi  thesis.tex
service/cakealign_home/: build_SunOS  rzn
service/compiletest_home/: build_Linux  build_OSF1  build_SunOS  rzn
service/dr_geometry_home/: build_SunOS  last.kumac  run1  rzn  rzn3  z0miss_problem.eps  z0miss_problem.kumac
service/dr_wiggle_home/: build_OSF1  build_SunOS  rzn
service/fittingweights_home/: emulate_12-11-12_114138-115029.drweight2layerdriftentang  emulate_12-11-12_114138-115029.drweight2layertheta  (+9 more)
(+10611 files in other folders)
